Fix carouse infobox to work on small height devices such as widescreen laptops

--- a/site/web/app/themes/host/assets/css/main.css
+++ b/site/web/app/themes/host/assets/css/main.css
@@ -5630,11 +5630,12 @@ a.room-list-nav__link:hover {
 }
 
 .carousel-infobox__subheading {
-  margin-top: 20px;
+  display: block;
+  padding-top: 20px;
 }
 
 .carousel-infobox__subheading + :not(.carousel-infobox__subheading) {
-  margin-top: 5px;
+  padding-top: 5px;
 }
 
 .carousel-infobox__underlink-link {
@@ -5668,6 +5669,30 @@ a.room-list-nav__link:hover {
 
 .carousel-infobox__underlink-link:hover:before, .carousel-infobox__underlink-link:focus:before {
   background-color: #fff;
+}
+
+.carosel-infobox__content {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-rendering: optimizespeed;
+}
+
+.carosel-infobox__primary,
+.carosel-infobox__secondary {
+  -ms-flex: 0 0 auto;
+      flex: 0 0 auto;
+  box-sizing: border-box;
+  width: 100%;
+  text-rendering: auto;
 }
 
 .secondary-split-feature__aside {
@@ -8075,6 +8100,9 @@ a.article-tile__link:hover .article-tile__location {
     display: -ms-flexbox;
     display: flex;
   }
+  .slick-header-carousel{
+    min-height: 31.25rem;
+  }
   .slick-header-carousel .slick-prev,
   .slick-header-carousel .slick-next{
     height: 18.375rem;
@@ -9729,11 +9757,17 @@ a.article-tile__link:hover .article-tile__location {
   .carosel-infobox{
     transform: none;
     top: 0;
-    bottom: -3.4375rem;
     -ms-flex-pack: start;
     justify-content: flex-start;
     overflow: auto;
     width: 40%;
+  }
+  .carosel-infobox__primary,
+  .carosel-infobox__secondary{
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+    width: auto;
+    max-width: 50%;
   }
 }
 
